fix: grid on small

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1533,7 +1533,7 @@
 					}
 				}
 
-				&.icons-grid {
+				&.icons-grid-sm {
 					li {
 						box-shadow: inset 0 1px 0 0 _palette(border) !important;
 						float: none;
